<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/light"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_font"
                android:text="@string/str_google"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvTranslate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/translate_font"
                android:text="@string/str_translate"
                android:textColor="@color/dark_grey"
                android:textSize="22sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/email_tv_background"
            android:gravity="center"
            android:text="@string/str_gmail_start"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_rounded_view"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="48dp"
                android:paddingBottom="4dp">

                <EditText
                    android:id="@+id/edtText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@null"
                    android:hint="@string/str_enter_text_hint"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTranslation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/blue"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtText" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/light_blue"
                    android:enabled="false"
                    android:text="@string/str_save"
                    android:textAllCaps="false"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toTopOf="@id/view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTranslation" />

                <View
                    android:id="@+id/view"
                    android:layout_width="48dp"
                    android:layout_height="4dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/line_rounded_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTranslateFrom"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_rounded"
                    android:fontFamily="@font/google_font"
                    android:paddingVertical="16dp"

                    android:text="@string/str_uzbek"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/ivChangeLanguage"
                    android:layout_width="wrap_content"
                    android:padding="6dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:background="@drawable/imageview_background"
                    android:src="@drawable/ic_change_hor" />

                <TextView
                    android:id="@+id/tvTranslateTo"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_rounded"
                    android:fontFamily="@font/google_font"
                    android:paddingVertical="16dp"
                    android:text="@string/str_english"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/str_saved_words"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSavedWords"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>